--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <body>
   <!--文字の大きさの練習-->
 
- 
-
+<br>
+<h1>練習問題2.2</h1>
+<br>
 <h1>Hello World</h1>
   <h2>Hello World</h2>
   <h3>Hello World</h3>
@@ -16,7 +17,9 @@
       <li>ほげほげ</li>
       <li>ほにゃらら</li>
   </ol>
-</body>
+<br>
+<h1>練習問題2.3</h1>
+<br>
 <dl>
 <dt>作者</dt>
 <dd>ジョン</dd>
@@ -26,10 +29,10 @@
 </dl>
 
 <dl>
-<dt　lang="ja"><dfn>色</dfn></dt>
+<dt lang="ja"><dfn>色</dfn></dt>
 <dt lang="en-US"><dfn>color</dfn></dt>
 <dt lang="en-GB"><dfn>colour</dfn></dt>
-<dd>可視光線の波長の長短によって人が視覚で感じ分けられる色覚・色刺激のこと</dd>
+<dd>可視光線の波長の長短によって人が視覚で感じ分けられる色覚・色刺激のこと。</dd>
 </dl>
 <p>ゲームの得点は以下の順序で計算されます。    
 </p>
@@ -44,6 +47,9 @@
 <dt>それ以外の場合</dt>
 <dd>ポイントは加算されません。</dd>
 </dl>
+<br>
+<h1>練習問題2.4</h1>
+<br>
 <table>
 <caption>
 <strong>お寿司をどこで食べるか？その長所と短所</strong>
@@ -73,4 +79,5 @@
 <tr><th>回転寿司</th><td>値段が良心的、気軽に手に取れる</td><td>ネタが解凍もの、休みの日には混む</td></tr>
 </tbody>
 </table>
+</body>
 </html>
