--- a/index.html
+++ b/index.html
@@ -90,5 +90,34 @@ style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup><br/>
 <bdo dir="rtl">昔の日本語は右から左に書いていました。</bdo></p>
 </li>
 </ul>
+<br>
+<h1>練習問題2.6</h1>
+<br>
+   <p>テキスト入力:<input type="text"></p>
+
+<br>
+<h1>練習問題2.7</h1>
+<br>
+<form action="xxx.php" method="POST"><label>メール(type="email"):<input type="email"
+name="email"></label><input type="submit" value="送信"></form>
+<form action="xxx.php" method="post"><label>URL(type="url"):<input type="url"></label><input type="submit" value="送信"></form>
+<form action="xxx.php" method="post"><label>検索(type="search"):<input type="search"
+name ="search"></label><input type="submit" value="送信"></form>
+<form action="xxx.php" method="post"><label>電話(type="telephone"):<input type="tel"
+name="tel"></label><input type="submit" value="送信"></form>
+<form action="xxx.php" method="post"><label>数値(type="number"):<input type="number"
+name="number"></label><input type="submit" value="送信"></form>
+<form action="xxx.php" method="post"><label>日付(type="date"):<input type="date"
+name="date"></label><input type="submit" value="送信"></form>
+<form action="xxx.php" method="post"><label>ローカル日時(type="datetime-local"):<input type="datetime-local"
+name="datetime-local"></label><input type="submit" value="送信"></form>
+<form action="xxx.php" method="post"><label>月(type="month"):<input type="month"
+name="month"></label><input type="submit" value="送信"></form>
+<form action="xxx.php" method="post"><label>時間(type="time"):<input type="time"
+name="time"></label><input type="submit" value="送信"></form>
+<form action="xxx.php" method="post"><label>レンジ(type="range"):<input type="range"
+name="range"></label><input type="submit" value="送信"></form>
+<form action="xxx.php" method="post"><label>色(type="color"):<input type="color"
+name="color"></label><input type="submit" value="送信"></form>
 </body>
 </html>
