--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ maxlength="4"></label></p>
 <label><input type="checkbox" name="kamoku" value="eigo">英語</label>
 <label><input type="checkbox" name="kamoku" value="sansu">算数</label>
 <label><input type="checkbox" name="kamoku" value="rika">理科</label>
-<label><input type="checkbox" name="kamoku" value="syakai">社会</lebel>
+<label><input type="checkbox" name="kamoku" value="syakai">社会</label>
 <label><input type="checkbox" name="kamoku" value="taiiku">体育</label>
 </p>
 <p><label>宿題ファイル:<input type="file" name="syukudai"></label></p>
