--- a/index.html
+++ b/index.html
@@ -147,5 +147,27 @@ maxlength="4"></label></p>
 <input type="submit" value="送信">
 <input type="reset" value="リセット">
 </p>
+
+<br>
+<h1>練習問題3.1</h1>
+<p>アンカータグの練習です。</p>
+<a href="a.html">相対パスでリンクします</a><br>
+<a href="https://www.josai.ac.jp/education/management/index.html">絶対パスで城西大学経営学へリンクします。</a><br>
+<a href="mailto:info@yahoo.com">メール(実際には動きません)</a><br>
+<a href="https://www.josai.ac.jp/education/management/index.html/"><img src="./image/keiei_small" alt="城西大学ホームページ"></a>
+
+<br>
+<h1>練習問題3.2</h1>
+<br>
+<a href="a.html" target="_blank">別画面を開いてリンクします</a><br>
+<a href="a.html" target="_self">リンク元と同じフレームにリンクします</a><br>
+<a href="a.html" target="_parent">ひとつ上の親フレームにリンクします</a><br>
+<a href="a.html" target="_top">フレームをすべて解除してリンクします</a><br>
+<a href="a.html" target="abc">abcという名前のフレームにリンクします</a><br>
+
+<br>
+<h1>練習問題3.3</h1>
+<br>
+
 </body>
 </html>
