--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li>ほげほげ</li>
       <li>ほにゃらら</li>
   </ol>
+<a id="abc">ここがabcの場所</a>
 <br>
 <h1>練習問題2.3</h1>
 <br>
@@ -151,6 +152,9 @@ maxlength="4"></label></p>
 <br>
 <h1>練習問題3.1</h1>
 <p>アンカータグの練習です。</p>
+
+<a id="def">ここがdefの場所</a>
+
 <a href="a.html">相対パスでリンクします</a><br>
 <a href="https://www.josai.ac.jp/education/management/index.html">絶対パスで城西大学経営学へリンクします。</a><br>
 <a href="mailto:info@yahoo.com">メール(実際には動きません)</a><br>
@@ -169,5 +173,27 @@ maxlength="4"></label></p>
 <h1>練習問題3.3</h1>
 <br>
 
+ファイルの途中にidでabcという名前を付けます。
+<a href="a.html#abc">別ファイルの名前を付けた場所へリンクします。</a><br>
+<a href="a.html#def">別ファイルの名前を付けた場所へリンクします。</a>
+
+<br>
+<h1>練習問題3.4</h1>
+<br>
+<aside class="ad">
+<h1>広報</h1>
+<a href="https://www.josai.ac.jp/club/jyosisofuto.html">
+<section>
+<h1>城西大学　女子ソフトボール部</h1>
+<p>女子ソフトボール部＜全日本総合女子ソフトボール選手権大会出場決定！＞</p>
+</section></a>
+
+<a href="https://www.josai.ac.jp/news/20200615-04.html">
+<section>
+<h1>城西大学　JOSAI SPORTS FEILD</h1>
+<p>JOSAI SPORTS FIELD 建設・整備が進んでいます【城西大学　坂戸キャンパス】</p>
+<p>城西大学坂戸キャンパスの北側の毛呂山町下川原沼に、サッカー場2面、ソフトボール場1面、アップダウンのあるランニングコース、管理施設にはシャワー室やミーティングルームなどを備えた新しいグラウンド　”JOSAI SPORTS FEILD” が完成間近です。使用開始は、2020年9月の予定です。</p>
+</section></a>
+</aside>
 </body>
 </html>
