--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ maxlength="4"></label></p>
 <br>
 
 ファイルの途中にidでabcという名前を付けます。
-<a href="a.html#abc">別ファイルの名前を付けた場所へリンクします。</a><br>
+<a href="#abc">abcと名前を付けた場所へリンクします。</a><br>
 <a href="a.html#def">別ファイルの名前を付けた場所へリンクします。</a>
 
 <br>
