--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ maxlength="4"></label></p>
 
 <a href="a.html">相対パスでリンクします</a><br>
 <a href="https://www.josai.ac.jp/education/management/index.html">絶対パスで城西大学経営学へリンクします。</a><br>
-<a href="mailto:info@yahoo.com">メール(実際には動きません)</a><br>
+<a href="mailto:zm19568@josai.ac.jp"> 自分宛メール</a><br>
 <a href="https://www.josai.ac.jp/education/management/index.html/"><img src="./image/keiei_small" alt="城西大学ホームページ"></a>
 
 <br>
