--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title> Web開発の練習4月27日</title>
   <link rel="stylesheet" href="mystyle.css"><!--この行を追加-->
+  <script src="myjs.js"></script> <!--この行を追加-->
+  <script src="ex6-1.js"></script>
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -217,5 +219,12 @@ maxlength="4"></label></p>
 <li><a>クラブ・サークル活動</a></li>
 </ul>
 </nav>
+<!--
+<h1>イベントハンドラの練習</h1>
+<input type="button" value="ここをクリック"
+ondblclick="alert('Hello,Osamu!');">
+-->
+<input type="button" value="ここをクリック"
+onclick="sayhello();sayhello();">
 </body>
 </html>
