--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="ex6-5.js"></script>
   <script src="ex-6-7.js"></script>
   <script src="ex6-8.js"></script>
+  
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -255,6 +256,14 @@ onclick="saygoodbye();">
  <input type="button" value="太郎" onclick="taro68();">
  <input type="button" value="花子" onclick="hanako68();">
  <p id="who68">world</p>
+
+ <br>
+ <h1>JavaScriptによるページの変更</h1>
+ <br>
+ <div id="txt1">
+   <input type="button" value="テキストの変更"
+  onclick="txtchange1();">
+   　城西大学</div>
  
 </body>
 </html>
