--- a/index.html
+++ b/index.html
@@ -258,12 +258,18 @@ onclick="saygoodbye();">
  <p id="who68">world</p>
 
  <br>
- <h1>JavaScriptによるページの変更</h1>
+ <h1>JavaScriptによるページの変更69</h1>
  <br>
  <div id="txt1">
    <input type="button" value="テキストの変更"
   onclick="txtchange1();">
    　城西大学</div>
+  
+   <div id="image1">
+     <input type="button" value="画像の変更"
+    onclick="imgchange1();">
+     <img src='./image/josai.png' id="logo" alt="Josai
+    Logo"></div>
  
 </body>
 </html>
