--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src="ex6-5.js"></script>
   <script src="ex-6-7.js"></script>
   <script src="ex6-8.js"></script>
+  <script src="ex6-9.js"></script>
+  <script src="ex6-10.js"></script>
   
 </head>
 <body>
