--- a/index.html
+++ b/index.html
@@ -230,8 +230,16 @@ maxlength="4"></label></p>
 <input type="button" value="ここをクリック"
 ondblclick="alert('Hello,Osamu!');">
 -->
+
+<br>
+<h1>練習6-2,3</h1>
+<br>
 <input type="button" value="ここをクリック"
-onclick="sayhello();sayhello();">
+onclick="sayhello61();sayhello61();">
+
+<br>
+<h1>練習問題6-4</h1>
+<br>
 <input type="button" value="ここをクリック"
 onclick="saygoodbye();">
 <br>
