--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 <br>
 <h1>練習問題2.5</h1>
 <br>
+<article>
 <ul>
 <li>参考資料を調べ、次のように表示されるHTMLを書きなさい。
 <p
@@ -103,6 +104,7 @@ style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup><br/>
 <bdo dir="rtl">昔の日本語は右から左に書いていました。</bdo></p>
 </li>
 </ul>
+</article>
 <br>
 <h1>練習問題2.6</h1>
 <br>
@@ -252,12 +254,14 @@ onclick="saygoodbye();">
  <br>
  <h1>引数の練習</h1>
  <br>
+ <article>
  <input type="button" value="あいさつ" onclick="sayhello67();">
  <input type="button" value="太郎" onclick="someone('太郎');">
  <input type="button" value="花子" onclick="someone('花子');">
  <input type="button" value="レイ" onclick="someone('レイ');">
  <input type="button" value="シンジ" onclick="someone('シンジ');">
  <input type="button" value="アスカ" onclick="someone('アスカ');">
+ </article>
 
  <br>
  <h1>JavaScriptによる変更の練習</h1>
