--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <script src="ex6-8.js"></script>
   <script src="ex6-9.js"></script>
   <script src="ex6-10.js"></script>
+  <script src="ex07-1.js"></script>
+  <script src="ex07-3.js"></script>
   
 </head>
 <body>
@@ -284,6 +286,21 @@ onclick="saygoodbye();">
     onclick="imgchange1();">
      <img src='./image/josai.png' id="logo" alt="Josai
     Logo"></div>
+
+    <br>
+    <h1>練習問題7－1、テキスト入力の練習</h1>
+    <br>
+        <input type="button" value="あいさつ"
+      onclick="sayhallo71();">
+        <p>誰？<input type="text" id="who71"></p>
+
+  <br>
+  <h1>練習問題7‐3、足し算</h1>
+  <br>
+  <p>
+    <input type="text" id="input1">+<input type="text" id="input2">
+    <input type="button" value="計算" onclick="add();"> 
+  </p>
  
 </body>
 </html>
