--- a/index.html
+++ b/index.html
@@ -298,9 +298,19 @@ onclick="saygoodbye();">
   <h1>練習問題7‐3、足し算</h1>
   <br>
   <p>
-    <input type="text" id="input1">+<input type="text" id="input2">
+    <input type="text" id="input1"> + <input type="text" id="input2">
     <input type="button" value="計算" onclick="add();"> 
   </p>
+
+  <br>
+  <h2>BMI計算</h2>
+  <br>
+  <p>
+  体重:<input type="text" id="input3">
+  身長:<input type="text" id="input4">
+  <input type="button" value="計算"　onclick="calcBmi();">
+</p>
+
  
 </body>
 </html>
