--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="ex6-10.js"></script>
   <script src="ex07-1.js"></script>
   <script src="ex07-3.js"></script>
-  
+  <script src="ex07-31.js"></script>
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -303,11 +303,9 @@ onclick="saygoodbye();">
   <br>
   <h2>BMI計算</h2>
   <br>
-  <p>
-  体重:<input type="text" id="input3">
-  身長:<input type="text" id="input4">
-  <input type="button" value="計算"　onclick="calcBmi();">
-</p>
+  <p>体重:<input type="number" id="weight"></p>
+  <p>身長:<input type="number" id="height"></p>
+  <p><input type="button" value="計算" onclick=" calcBmi();"></p>
 
  
 </body>
