--- a/index.html
+++ b/index.html
@@ -282,8 +282,10 @@ onclick="saygoodbye();">
    <div id="image1">
      <input type="button" value="画像の変更"
     onclick="imgchange1();">
-     <img src='./image/https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.josai.ac.jp%2Fnews%2F20190404-02.html&psig=AOvVaw0C-w2E083z8PMkVizXhcOD&ust=1624979965435000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCLjf1p7QuvECFQAAAAAdAAAAABAD' id="logo" alt="Josai
-    Logo"></div>
+     <img src='./image/ogp.png'
+     id="logo" alt="Josai
+    Logo">
+  </div>
 
     <br>
     <h1>練習問題7－1、テキスト入力の練習</h1>
