--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ onclick="saygoodbye();">
    <div id="image1">
      <input type="button" value="画像の変更"
     onclick="imgchange1();">
-     <img src='./image/ogp.png'
+     <img src='./image/abm00036795.png'
      id="logo" alt="Josai
     Logo">
   </div>
